# sundae-sync-v2

./: .gitignore  Cargo.toml  LICENSE  LICENSE-GRANTS.md  README.md  dist-workspace.toml  dolos.service  resources.template  sundae-sync-v2.service
.cargo/: config.toml
.github/workflows/: go.yml  release.yml
clients/go/: .golangci.yml  README.md  go.mod  go.sum
clients/go/txdao/: build.go  dao.go  dao_test.go  types.go  types_test.go
env/: cardano-tom.env  preprod.env  preview.env  prod.env
src/: archive.rs  args.rs  broadcast.rs  filter.rs  lib.rs  logic.rs  main.rs  node.rs  u5c.rs  utils.rs
src/broadcast/: broadcast.rs  destination.rs  filter.rs  mod.rs
src/lock/: lock.rs  lock_thread.rs  mod.rs
src/worker/: follower.rs  mod.rs  worker.rs
tests/: destination_tests.rs  lock_tests.rs
tests/common/: mod.rs
