[package]
name = "sundae-sync-v2"
description = "Sundae Labs cardano indexing backend"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/sundae-sync-v2"
license-file = "LICENSE"
publish = false

[dependencies]
pallas = { git = "https://github.com/txpipe/pallas.git", branch = "main" }

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
utxorpc = "0.4"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
aws-sdk-s3 = "1.41.0"
aws-sdk-kinesis = "1.35.0"
serde = "1.0.204"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
ctrlc = "3.4.4"
tokio-util = "0.7.11"
bytes = "1.6.1"
prost = { version = "0.12.6", features = ["no-recursion-limit"] }
futures = "0.3.30"
serde_bytes = "0.11.15"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[package.metadata.dist]
dist = true
