[package]
name = "sundae-sync-v2"
description = "Sundae Labs cardano indexing backend"
version = "0.4.1"
edition = "2021"
repository = "https://github.com/SundaeSwap-finance/sundae-sync-v2"
license-file = "LICENSE"
publish = false
default-run = "sundae-sync-v2"

[dependencies]
pallas = { version = "1.0.0-alpha.4" }

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
utxorpc = "0.13"
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
aws-sdk-s3 = "1.41.0"
aws-sdk-kinesis = "1.35.0"
serde = "1.0.204"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
ctrlc = "3.4.4"
tokio-util = "0.7.11"
bytes = "1.11"
prost = { version = "0.14", features = ["no-recursion-limit"] }
futures = "0.3.30"
serde_bytes = "0.11.15"
serde_bytes_base64 = "0.1.1"

[dev-dependencies]
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14.0", features = ["dynamodb"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
